<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_MoveActivity1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text1" />

    <Button
        android:id="@+id/btn_MoveActivityData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text2" />

    <Button
        android:id="@+id/btn_MoveActivityObjek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_text3" />

    <Button
        android:id="@+id/btn_MoveToResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_result" />

    <TextView
        android:id="@+id/tv_resultNUmber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="NILAI DARI ACTIVITY"
        android:textSize="18sp"
        android:textStyle="bold" />
</LinearLayout>